# FYP-Code-Switching-Detection-in-Malaysia

./: .gitignore  README.md  app.py  chat_app.py  dashboard_lookup_5000.jsonl  data.ipynb  datasetLink.txt  db.sqlite3  demo_input.txt  evaluate_models.py  fyp.db  inspect_data.py  login.py  main.py  models.py  predictor.py  pyproject.toml  requirements.txt  test.py  translator.py
Web/: settings.py  urls.py
WebApplication/WebApplication/: asgi.py  settings.py  urls.py  wsgi.py
chat/: urls.py  views.py
chat/static/chat/css/: style.css
chat/static/chat/js/: main.js
chat/templates/chat/: chat_interface.html
dashboard/: app.py  db.py  fyp.db  login.py  models.py  requirements.txt
data_preprocessing/: auto_labeler.py  clean_and_deduplicate.py  clean_dataset.py  clean_sample.py  combine_data.py  combine_datasets.py  convert_to_conll.py  create_final_import_file.py  create_full_raw_dataset.py  create_sample.py  extract_data.py  find_keys.py  fix_jsonl.py  generate_with_malaya.py  get_datasets.py  inspect_data.py  run_tokenization.py  run_tokenization_tpu.py  split_text_file.py  test.py
model_training/: mapping.py  mbert_mapping.py  run_training.py  train_mbert.py  train_xlm.py  xlm_mapping.py  xlm_tpu_mapping.py
