[project]
name = "fyp-code-switching-detection-in-malaysia"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.1",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "fasttext-wheel>=0.9.2",
    "ijson>=3.4.0.post0",
    "ipykernel>=7.1.0",
    "langdetect>=1.0.9",
    "malaya>=5.1.1",
    "pyenchant>=3.3.0",
    "seqeval>=1.2.2",
    "streamlit>=1.50.0",
    "tensorboard>=2.20.0",
    "torch",
    "torchvision",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true